--- a/config.env
+++ b/config.env
@@ -2,3 +2,8 @@ NODE_ENV=development
 PORT=3000
 USERNAME=xavi
 PASSWORD=123456
+DATABASE_PASSWORD=jUw7_f5*Gv_iX-C
+DATABASE=mongodb+srv://xaviguasch:jUw7_f5*Gv_iX-C@cluster0.h0rxebx.mongodb.net/natours?retryWrites=true&w=majority
+
+
+
