signed up users using JWTs

--- a/config.env
+++ b/config.env
@@ -5,5 +5,5 @@ PASSWORD=123456
 DATABASE_PASSWORD=jUw7_f5*Gv_iX-C
 DATABASE=mongodb+srv://xaviguasch:jUw7_f5*Gv_iX-C@cluster0.h0rxebx.mongodb.net/natours?retryWrites=true&w=majority
 
-
-
+JWT_SECRET=this-is-an-impenetrable-password
+JWT_EXPIRES_IN=90d
